--- a/themes/soldaini/assets/sass/variables.scss
+++ b/themes/soldaini/assets/sass/variables.scss
@@ -3,11 +3,11 @@ $max-width: 720px;
 $gutter: 24px;
 $avatar-size: 256px;
 $mobile-width: 480px;
-$tiny-width: 420px;
+$tiny-width: 360px;
 
 // Typography
-$base-font-size: 16px;
-$base-line-height: 1.5;
+$base-font-size: 15px;
+$base-line-height: 1.4;
 
 // Colors (light)
 $paper: #f7f3ed;
